--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,10 @@ nav {
     display: flex;
     flex-direction: column;
 }
-
+.about-me__info {
+   displauy: flex;
+   flex-direction: column; 
+}
 .about-me__info--container {
     display: flex;
     flex-direction: column;
@@ -122,6 +125,7 @@ nav {
     /* improving pic*/
     transform: scale(1.1);
 }
+
 .about-me__info--para {
   font-size: 20px; 
   margin-bottom: 28px; 
@@ -129,5 +133,24 @@ nav {
 .about-me__info--title {
   margin-bottom: 16px; 
 }
+
+.about-me__link {
+    font-size: 20px;
+    color: #242424;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__img--container {
+ flex: 1;
+ display: flex;
+ align-items: center;   
+ padding-top: 48px;
+}
+
+.about-me__img {
+    width: 100%;
+}
+
 
 
