--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
 h1,h2,h3,h4,h5,h6,span {
     color: #242424;
     text-align: center;
@@ -21,6 +26,39 @@ p {
     font-size: 16px;
 }
 
+a {
+text-decoration: none;
+position: relative;
+transition: opacity 300ms ease;
+}
+
+i:hover {
+  opacity: 0.7;  
+}
+
+.link__hover-effect:after {
+content: "";
+position: absolute;
+height: 3px;
+width: 0;
+bottom: -3px;
+right: 0;
+transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after {
+background-color: white;
+
+}
+.link__hover-effect--black:after {
+background-color: black;
+
+}
+
+.link__hover-effect:hover:after {
+    width: 100%;
+    left: 0;
+}
 
 
 /* Navigation Bar */
@@ -38,13 +76,14 @@ li {
 }
 
 .container {
-   padding: 50px 0; 
+   padding: 125px 0; 
 }
 
 .row {
    width: 100%;
    max-width: 800px; 
    margin: 0 auto;
+   padding: 0 12px;
 }
 
 .text--purple {
@@ -71,6 +110,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 12px;
 }
 
 .nav__link--list {
@@ -80,7 +120,6 @@ nav {
 .nav__link--anchor {
     margin: 0 12px;
     outline-color: #242424;
-    text-decoration: none;
     font-weight: 700;
 }
 
@@ -129,30 +168,59 @@ nav {
   overflow: hidden;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
   margin-bottom: 28px;
+  animation: animate-profile-picture 600ms 200ms backwards;
 }
+
+   @keyframes animate-profile-picture {
+    0% {
+        transform: scale(0);
+    }
+    80%{
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+   }
 
 .about-me__picture {
-    width: 89%;
-
-    /* improving pic*/
+    width: 100%;
     transform: scale(1.1);
 }
+
+ /* improving pic*/
 
 .about-me__info--para {
   font-size: 20px; 
   margin-bottom: 28px; 
+  animation: fade-up 650ms 400ms backwards;
 }
 .about-me__info--title {
   margin-bottom: 16px; 
+  animation: fade-up 650ms 400ms backwards;
 }
 
 .about-me__link {
     font-size: 20px;
     color: #242424;
-    text-decoration: none;
     padding: 0 16px;
 }
 
+.about-me__links {
+    animation: fade-up 650ms 800ms backwards;
+
+}
+
+@keyframes fade-up {
+0% {
+    opacity: 0;
+    transform: translateY(40px);
+}
+100% {
+    opacity: 1;
+    transform: translateY(0);
+}
+}
 .about-me__img--container {
  flex: 1;
  display: flex;
@@ -161,8 +229,36 @@ nav {
 }
 
 .about-me__img {
+    animation: fade-in 1200ms 800ms backwards;
     width: 100%;
 }
+
+@keyframes fade-in {
+    0% {
+    opacity: 0;    
+    }
+    100% {
+    opacity: 1;    
+    }
+}
+
+.wave {
+    display: inline-block;
+    animation: animate-wave 500ms infinite ease-in-out;
+}
+
+@keyframes animate-wave {
+0% {
+    transform: rotate(0deg);
+}
+50% {
+    transform: rotate(30deg);
+}
+100% {
+    transform: rotate(0deg);
+}            
+}
+
 
 /* tech-stack */
 
@@ -194,6 +290,7 @@ nav {
 
 .language__list {
     display: flex;
+    justify-content: center;
     width: 100%;
     flex-wrap: wrap;
 }
@@ -213,6 +310,14 @@ nav {
 }
 
 /* Projects Section */
+
+.project {
+  margin-bottom: 135px;  
+}
+
+.project:last-child {
+    margin-bottom: 40px;
+}
 
 .project__img {
   width: 100%;    
@@ -250,6 +355,7 @@ nav {
 
 .project:hover .project__description {
     opacity: 1;
+     transform: translateY(-50%);
 }
 
 .project__list {
@@ -260,11 +366,11 @@ nav {
     position: absolute;
     top: 50%;
     left: 90px;
-    transform: translateY(-50%);
+    transform: translateY(100%);
     max-width: 550px;
     z-index: 3;
     opacity: 0;
-    transition: opacity 300ms;
+    transition: transform 450ms,  opacity 300ms;
 }
 
 .project__description--title {
@@ -278,7 +384,6 @@ margin: 16px 0;
 .project__description--link {
  font-size: 20px;  
  margin-right: 16px; 
- text-decoration: none;
 } 
 
 
@@ -289,3 +394,116 @@ margin: 16px 0;
     text-align: left;
     color: white;
 }
+
+/* Footer Section */
+
+footer {
+    background-color: #242424;
+}
+
+
+
+.footer__social--list {
+    margin-bottom: 28px;
+    max-width: 500px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8% 0;
+}
+.footer__logo--img {
+    width: 70px;
+    height: 70px;
+}
+
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper
+ {
+    color: #fff;
+}
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor {
+    position: relative;
+    margin-bottom: 20px;  
+
+}
+
+.footer__anchor:hover .footer__logo--popper {
+   transform: translateX(60px); 
+   opacity: 1;
+}
+
+/* small phones,tablets */
+
+@media (max-width:768px) {
+    nav {
+        height: 68px;
+    }
+    h1 {
+        font-size: 28px;
+    }
+    .about-me__info--para {
+       font-size: 18px; 
+    }
+    .language {
+    width: calc(100%/3);
+    }
+
+    .project__description--para {
+        font-size: 14px;
+    }
+    .project__description {
+        left: 30px;
+        padding-right: 30px;
+    }
+}
+
+
+@media (max-width:480px) {
+  .nav__link:not(:last-child) {
+    display: none;
+  }
+
+  .project__description {
+    padding: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  .project__description--para {
+    display: none;
+  }
+
+ .project__description--link {
+    display: flex;
+    justify-content: center;
+ }
+
+ .project__description--title {
+    font-size: 32px;
+    line-height: 1;
+    text-align: center;
+ }
+
+ .project__description--sub-title {
+    text-align: center;
+    margin: 12px 0;
+ }
+}
+
